@startuml Flux Inscription Observer

title Flux Complet — Pattern Observer + Facade\n(Inscription d'un enfant à un créneau)

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam ArrowColor #495057

skinparam class {
    BackgroundColor #F8F9FA
    BorderColor #495057
    HeaderBackgroundColor #343A40
    HeaderFontColor #FFFFFF
}

skinparam packageStyle rectangle

' ─────────────────────────────────────────
'  OBSERVER PATTERN COMPLET
' ─────────────────────────────────────────
package "interfaces" {
    interface Observer <<interface>> {
        + update(message : String) : void
    }

    interface Subject <<interface>> {
        + addObserver(observer : Observer) : void
        + removeObserver(observer : Observer) : void
        + notifyObservers(message : String) : void
    }
}

package observers {
    class ParentObserver {
        - parentId : int
        - parentName : String
        - notificationRepository : NotificationRepository
        --
        + ParentObserver(parentId : int, parentName : String)
        + update(message : String) : void
    }
}

package services {
    class NotificationService {
        - observers : List<Observer>
        --
        + addObserver(observer : Observer) : void
        + removeObserver(observer : Observer) : void
        + notifyObservers(message : String) : void
        + notifyParent(parentId : int, message : String) : void
        + clearObservers() : void
    }
}

package repositories {
    class NotificationRepository {
        + save(notification : Notification) : void
        + findByParentId(parentId : int) : List<Notification>
        + generateNextId() : int
    }
}

package Models {
    class Notification {
        - id : int
        - parentId : int
        - message : String
        - sent : boolean
        - sentDate : LocalDateTime
        --
        + markAsSent() : void
    }
}

' ─────────────────────────────────────────
'  PATTERN STATE complet
' ─────────────────────────────────────────
package "state pattern" #FCE4EC {

    interface ITimeSlotState <<interface>> {
        + register(timeSlot : TimeSlot) : void
    }

    class AvailableState {
        + register(timeSlot : TimeSlot) : void
        ' Accepte si registrationCount < maxCapacity
        ' Sinon lève CapacityException
    }

    class FullState {
        + register(timeSlot : TimeSlot) : void
        ' Toujours CapacityException
    }

    class "Models.TimeSlot" as TS {
        - registrationCount : int
        - maxCapacity : int
        - state : ITimeSlotState
        --
        + register() : void
        + incrementRegistrationCount() : void
        + refreshState() : void
    }

    ITimeSlotState <|.. AvailableState : implements
    ITimeSlotState <|.. FullState      : implements
    TS --> ITimeSlotState               : délègue via state
    TS ..> AvailableState               : refreshState()
    TS ..> FullState                    : refreshState()
}

' ─────────────────────────────────────────
'  RELATIONS OBSERVER
' ─────────────────────────────────────────
Observer <|.. ParentObserver           : implements
Subject  <|.. NotificationService      : implements
Subject  --> Observer                  : notifie (*)
NotificationService --> ParentObserver : ajoute en observateur

ParentObserver --> NotificationRepository : save(notification)
NotificationRepository --> Notification   : persiste

' ─────────────────────────────────────────
'  NOTE DE FLUX
' ─────────────────────────────────────────
note bottom of NotificationService
  notifyParent(parentId, msg) :
  1. clearObservers()
  2. addObserver(new ParentObserver(parentId, ...))
  3. notifyObservers(msg)
     → ParentObserver.update(msg)
        → crée Notification
        → markAsSent()
        → NotificationRepository.save()
end note

note bottom of AvailableState
  register(timeSlot) :
  if registrationCount >= maxCapacity
    → setState(new FullState())
    → throw CapacityException
  sinon → inscription acceptée
  (RegistrationService.incrementRegistrationCount())
end note

@enduml
